--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<form action="/posts/create" method="POST">
+    제목<br/>
+    <input type ="text" name="head"/><br/><br/>
+    내용<br/>
+    <textarea rows = "5"></textarea><br/>
+    
+    <input type="submit" value = "글 쓰기"/>
+</form>
