--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<form action="/posts/update/<%= @post_edit.id %>" method="POST">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %> <%# 게시글 변조(CSRF)를 방지하기위해 쓰는 토큰입니다. %>
+    제목<br/>
+    <input type="text" name="head" value="<%=@post_edit.title %>"/><br/><br/>
+    내용<br/>
+    <textarea rows="5" name="inside"><%= @post_edit.content %></textarea><br/>
+    
+    <input type="submit" value="글 쓰기"/>
+</form>
